{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "92ead980-3aa0-49af-8d5f-0f2d733e448d",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "3ce20504-f5e8-4ddb-9896-15a17e886053",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "03d55fdc-f434-48c7-8b0d-e6c73fb1fe80",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98d5827d-f845-400a-8128-ba41ac2e152d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fbc44d4-6ccd-447c-b796-791ace80c839",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}